--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h2>Raúl Gómez - Mercado libre</h2>
 <div>
-  Búsqueda
+  Bienvenido, ingrese su búsqueda
   <br>
   <input type="text" #prod class="form-control" placeholder="Ingrese su búsqueda"/>
   <button (click)="getProducts(prod)">Buscar</button>
