--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     <th>Imagen</th>
     <th>Nombre</th>
     <th>Precio</th>
-    <th>Vendedor</th>
+    <th>ID Vendedor</th>
   </tr>
   <tr *ngFor="let resul of resultado.results">
     <td><img src="{{resul.thumbnail}}" alt="Avatar"></td>
